--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,6 +4,7 @@
   <% @tasks.each do |task| %>
   <li>
     <%= task.completed %> : <%= task.title %>
+    <%= link_to "View details", task_path(task) %>
   </li>
   <% end %>
 </ul>
