--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,8 +5,9 @@
   <li>
     <%= task.completed %> : <%= task.title %>
     <%= link_to "View details", task_path(task) %>
+    <%= link_to "Delete task", task_path(task), method: :delete, data: { confirm: "Are you sure ?" } %>
   </li>
   <% end %>
 </ul>
 
-<%= link_to "Add a new task", tasks_new_path %>
+<%= link_to "Add a new task", new_task_path %>
